k8s/pgadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

    # Безопасность: HSTS
    nginx.ingress.kubernetes.io/hsts: "true"
    nginx.ingress.kubernetes.io/hsts-max-age: "31536000"
    nginx.ingress.kubernetes.io/hsts-include-subdomains: "true"
    nginx.ingress.kubernetes.io/hsts-preload: "true"

    # Переписываем URL, чтобы pgAdmin видел себя в корне
    nginx.ingress.kubernetes.io/rewrite-target: /pgadmin/$2
spec:
  ingressClassName: nginx
  rules:
    - host: qracun.me
      http:
        paths:
          - path: /pgadmin(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: pgadmin
                port:
                  number: 80
  tls:
    - hosts:
        - qracun.me
      secretName: qracun-tls
